5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1573_996.log
== TEST (2019-03-29 17:12:54) 
-- CODE:
print("  *****  ")
print("(* o  o *)")
print(" *  ^   *")
print(" * ---  * ")
print("  ***** ")
-- OUTPUT:
*****  
(* o  o *)
 *  ^   *
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:13:18) 
-- CODE:
print("   *****  ")
print("(* o  o *)")
print(" *  ^   *")
print(" * ---  * ")
print("  *
-- ERROR:
File "XXXX", line 5
    print("  *
             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:14:00) 
-- CODE:
print("   *****  ")
print("(* o  o *)")
print(" *  ^   *")
print(" * ---  * ")
print("   *****  ")
-- OUTPUT:
*****  
(* o  o *)
 *  ^   *
 * ---  * 
   *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:14:30) 
-- CODE:
print("   *****  ")
print("(*  o  o  *)")
print(" *   ^    *")
print(" *  ---   * ")
print("   *****  ")
-- OUTPUT:
*****  
(*  o  o  *)
 *   ^    *
 *  ---   * 
   *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:14:37) 
-- CODE:
print("   *****  ")
print("(*  o  o  *)")
print(" *   ^    *")
print(" *  ---   * ")
print("   *****  ")
-- EXECUTION TIME:
0.221315
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****  
(*  o  o  *)
 *   ^    *
 *  ---   * 
   *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
